<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AccentColor"
    tools:context=".Activity.LoginActivity">


    <LinearLayout
        android:id="@+id/upper_menu_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/PrimaryColor"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cart_logo"
            android:layout_width="41dp"
            android:layout_height="36dp"
            android:src="@drawable/quick_cart_logo"
            android:layout_gravity="center"
            android:layout_marginStart="15dp">

        </ImageView>

        <TextView
            android:id="@+id/quickcartnameinloginview"
            android:layout_width="wrap_content"
            android:fontFamily="@font/quick_font"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/quickcart"
            android:layout_gravity="center"
            android:layout_marginStart="10dp">

        </TextView>

        <ImageView
            android:id="@+id/helpmark"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginStart="190dp"
            android:src="@drawable/help">

        </ImageView>


    </LinearLayout>



    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="50dp"
        android:layout_marginBottom="-49dp"
        app:cardElevation="4dp">

        <!-- Content inside the CardView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Logintocontinue_tv"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="17dp"
                android:fontFamily="@font/quick_font"
                android:text="@string/create_an_account"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_gravity="center"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:textColor="@color/AccentColor" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enter_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/person"
                android:padding="20dp"
                app:boxCornerRadiusTopStart="1dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusBottomEnd="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etname"
                    android:singleLine="true"
                    android:inputType="textPersonName"
                    android:fontFamily="@font/quick_font"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name"
                    android:textColorHint="@color/AccentColor"
                    android:paddingStart="50dp"
                    android:shadowRadius="20" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enter_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/mail"
                android:padding="20dp"
                app:boxCornerRadiusTopStart="1dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusBottomEnd="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etemail"
                    android:singleLine="true"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quick_font"
                    android:hint="@string/enter_email"
                    android:textColorHint="@color/AccentColor"
                    android:paddingStart="50dp"
                    android:shadowRadius="20" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enter_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/lock"
                app:endIconDrawable="@drawable/notvisible"
                android:padding="20dp"
                app:boxCornerRadiusTopStart="1dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusBottomEnd="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etpass"
                    android:singleLine="true"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/AccentColor"
                    android:paddingStart="50dp"
                    android:fontFamily="@font/quick_font"
                    android:shadowRadius="20" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_forget_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textColor="@color/AccentColor"
                android:fontFamily="@font/quick_font"
                android:textSize="12sp"
                android:layout_gravity="right"
                android:layout_marginEnd="20dp">

            </TextView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="sign Up"
                android:textSize="20sp"
                android:backgroundTint="@color/AccentColor"
                android:fontFamily="@font/quick_font"
                app:cornerRadius="20dp"
                android:layout_marginTop="10dp"

                android:layout_gravity="center">

            </com.google.android.material.button.MaterialButton>


            <ImageView
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:src="@drawable/line"
                android:layout_marginTop="15dp"
                android:layout_gravity="center">

            </ImageView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iv_google_login"
                    android:background="@drawable/square"
                    android:padding="4dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="30dp"
                    android:src="@drawable/google">

                </ImageView>
                <ImageView
                    android:id="@+id/iv_facebook_login"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/square"
                    android:padding="4dp"
                    android:layout_marginEnd="30dp"
                    android:src="@drawable/facebook">

                </ImageView>
                <ImageView
                    android:id="@+id/iv_apple_login"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/square"
                    android:padding="4dp"
                    android:src="@drawable/apple">

                </ImageView>
            </LinearLayout>
            <ImageView
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:src="@drawable/line"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quick_font"
                android:text="@string/already_have_and_account_login"
                android:id="@+id/alreadyhaveacc"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp">

            </TextView>



        </LinearLayout>







    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cardview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/quick_font"
        android:backgroundTint="@color/yellow"
        app:cornerRadius="15dp"
        android:text="@string/welcome_to_quickcart"
        android:padding="40dp"
        android:textSize="23sp"
        android:textColor="@color/AccentColor"
        app:layout_constraintTop_toBottomOf="@+id/upper_menu_bar">

    </com.google.android.material.button.MaterialButton>


</androidx.constraintlayout.widget.ConstraintLayout>